--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
         <div class="modal-content">
         <div class="modal-header">
             <span class="close">&times;</span>
-        <h2>How to play Pig - Dice Game</h2>
+        <h2>How to play Where to Eat</h2>
         </div>
         <div class="modal-body">
         <p>GAME RULES:</p> <br>
-        <p>- The game has 2 players, playing in rounds</p><br>
-        <p>- In each turn, a player rolls a both dice as many times as they wish. Each result gets added to their ROUND score</p><br>
-        <p>- BUT, if one of the die rolls a 1, all their ROUND score gets lost. After that, it's the next player's turn</p><br>
-        <p>- The player can choose to 'Hold', which means that their ROUND score gets added to their GLOBAL score. After that, it's the next player's turn</p><br>
-        <p>- Players can choose to set a high score they wish to play to, if the box is empty the game will finish at a score of 100</p><br>
-        <p>GOOD LUCK!</p>
+        <p>- The game has 2 players</p><br>
+        <p>- Whose ever turn it is to choose where to eat is selected by pressing the change player button</p><br>
+        <p>- The current player is highlighted by the red dot next to their name</p><br>
+        <p>- To select a random restaurant the player must press the 'Choose Restaurant' button</p><br>
+        <p>- The game will only run once and display a random restaurant to eat at</p><br>
+        <p>- Once the current player as pressed the choose restaurant button the game ends</p><br>
+        <p>- Enjoy your meal!</p><br>
         </div>
         </div>
         </div>
