--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <p>- To select a random restaurant the player must press the 'Choose Restaurant' button</p><br>
         <p>- The game will only run once and display a random restaurant to eat at</p><br>
         <p>- Once the current player as pressed the choose restaurant button the game ends</p><br>
+        <p>- To start a new game, press 'Change Player' which will allow the other player to then select a random restaurant</p><br>
         <p>- Enjoy your meal!</p><br>
         </div>
         </div>
