--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!-- HOW TO PLAY -->
         
         <!-- Trigger/Open The Modal -->
-        <button class="myBtnHTP" id="myBtn" HOW TO PLAY! </button>
+        <button class="myBtnHTP" id="myBtn"> HOW TO PLAY! </button>
 
 
         <!-- The Modal -->
